--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Redux App</title>
+    <title>Cryptosino</title>
 
 <!-- font awesome for button icons -->
 <script src="https://kit.fontawesome.com/ee1da8edb5.js" crossorigin="anonymous"></script>
